# pybind11-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: FetchContent_Declare_Eigen3.cmake  FetchContent_Declare_FormatCmake.cmake  FetchContent_Declare_gtest.cmake  FetchContent_Declare_pybind11.cmake
mylib/: CMakeLists.txt
mylib/include/mylib/: mylib.hpp
mylib/src/: mylib.cpp  mylib_version.h.in
mylib/tests/: CMakeLists.txt
mylib/tests/unit/: CMakeLists.txt  test_mylib.cpp
python/: CMakeLists.txt
python/mylib/: __init__.py  _mylib.py
python/mylib11/: CMakeLists.txt  mylib11.cpp
python/tests/: .gitignore
python/tests/mylib/: test_mylib.py
python/tests/mylib11/: test_mylib11.py
